--- a/index.html
+++ b/index.html
@@ -84,17 +84,10 @@
       padding: 0 20px;
       position: relative;
       overflow: hidden;
-    }
-
-    #header video {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transform: translate(-50%, -50%);
-      z-index: -1;
+      background-image: url('background.jpg'); /* Replace with your image path */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
 
     #header .logo {
@@ -261,10 +254,6 @@
 
   <!-- Header Section -->
   <section id="header">
-    <video autoplay muted loop id="header-video">
-      <source src="background.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
     <img src="pltc-logo.png" alt="PLTC Logo" class="logo">
     <h1>Pepe's Left Toenail Clipping</h1>
     <h1>🐸SOON!🐸</h1>
@@ -446,4 +435,4 @@
     });
   </script>
 </body>
-  </html>
+</html>
