--- a/index.html
+++ b/index.html
@@ -256,17 +256,10 @@
   <section id="header">
     <img src="pltc-logo.png" alt="PLTC Logo" class="logo">
     <h1>Pepe's Left Toenail Clipping</h1>
-    <h1>🐸SOON!🐸</h1>
     <p>"The groundbreaking crypto innovation the world didn’t ask for, but desperately needs. 100% pure, unadulterated memetic energy. 🐸✂️"</p>
     <div class="cta-buttons">
-      <a href="https://t.me/PLTC_Coin" target="_blank">The Toenail Clipping Club</a>
-      <a href="https://x.com/PLTC_Coin" target="_blank">Buy $PLTC (Soon)</a>
+      <a href="https://pump.fun" target="_blank">Buy $PLTC</a>
     </div>
-  </section>
-
-  <!-- Infinite Scrolling Gallery -->
-  <section id="gallery">
-    <!-- Images will be dynamically loaded here -->
   </section>
 
   <!-- Footer Section -->
