--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
   <footer>
     <div class="social-icons">
       <a href="https://x.com/PLTC_Coin" target="_blank">Twitter</a>
-      <a href="https://t.me/PLTC_Coin" target="_blank">Telegram</a>
-      <a href="https://discord.gg/PLTC" target="_blank">Discord</a>
+      <a href="https://t.me/PLTC_Coin1" target="_blank">Telegram</a>
+      <a href="https://t.me/PLTC_Coin1" target="_blank">Discord</a>
     </div>
     <p>"Redefining finance, one toenail clipping at a time. 🐸©"</p>
   </footer>
