--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <h1>Pepe's Left Toenail Clipping</h1>
     <p>"The groundbreaking crypto innovation the world didn’t ask for, but desperately needs. 100% pure, unadulterated memetic energy. 🐸✂️"</p>
     <div class="cta-buttons">
-      <a href="https://pump.fun" target="_blank">Buy $PLTC</a>
+      <a href="https://pump.fun/coin/x3ym3r2zxSU3MSkU7QZnjxoReDfGXptjNGn4SX8pump" target="_blank">Buy $PLTC</a>
     </div>
   </section>
 
