--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <h1>Pepe's Left Toenail Clipping</h1>
     <p>"The groundbreaking crypto innovation the world didn’t ask for, but desperately needs. 100% pure, unadulterated memetic energy. 🐸✂️"</p>
     <div class="cta-buttons">
-      <a href="https://pump.fun/coin/x3ym3r2zxSU3MSkU7QZnjxoReDfGXptjNGn4SX8pump" target="_blank">Buy $PLTC</a>
+      <a href="https://t.me/+XYvr-lbynpcwNjM8" target="_blank">Buy $PLTC</a>
     </div>
   </section>
 
@@ -266,8 +266,8 @@
   <footer>
     <div class="social-icons">
       <a href="https://x.com/PLTC_Coin" target="_blank">Twitter</a>
-      <a href="https://t.me/PLTC_Coin1" target="_blank">Telegram</a>
-      <a href="https://t.me/PLTC_Coin1" target="_blank">Discord</a>
+      <a href="https://t.me/+XYvr-lbynpcwNjM8" target="_blank">Telegram</a>
+      <a href="https://t.me/+XYvr-lbynpcwNjM8" target="_blank">Discord</a>
     </div>
     <p>"Redefining finance, one toenail clipping at a time. 🐸©"</p>
   </footer>
