--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
   <!-- Background Music -->
   <audio id="background-music" loop>
-    <source src="background.mp3" type="audio/mpeg">
+    <source src="ERIKA.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
